--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
@@ -50,3 +50,4 @@ lecm-stmeditor_model.property.lecm-stmeditor_condition.title=\u0423\u0441\u043B\
 lecm-stmeditor_model.property.lecm-stmeditor_conditionErrorMessage.title=\u0421\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435 \u043E\u0431 \u043E\u0448\u0438\u0431\u043A\u0435
 lecm-stmeditor_model.property.lecm-stmeditor_timerDuration.title=\u041F\u0440\u043E\u0434\u043E\u043B\u0436\u0438\u0442\u0435\u043B\u044C\u043D\u043E\u0441\u0442\u044C
 lecm-stmeditor_model.property.lecm-stmeditor_stopSubWorkflows.title=\u0417\u0430\u0432\u0435\u0440\u0448\u0430\u0442\u044C \u0440\u0430\u043D\u0435\u0435 \u043D\u0430\u0447\u0430\u0442\u044B\u0435 \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u044B
+lecm-stmeditor_model.property.lecm-stmeditor_hideAction.title=\u0421\u043A\u0440\u044B\u0432\u0430\u0442\u044C \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0435, \u0435\u0441\u043B\u0438 \u043D\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u043E
