--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
@@ -1,35 +1,39 @@
-page.contracts.title=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
-page.contracts.filter.label=(\u0441\u043E\u0434\u0435\u0440\u0436\u0438\u043C\u043E\u0435 \u043E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u043D\u043E)
-header.contracts.label=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
-header.contracts.description=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+page.contracts.title=\u0414\u043e\u0433\u043e\u0432\u043e\u0440\u0430
+page.contracts.filter.label=(\u0441\u043e\u0434\u0435\u0440\u0436\u0438\u043c\u043e\u0435 \u043e\u0442\u0444\u0438\u043b\u044c\u0442\u0440\u043e\u0432\u0430\u043d\u043e)
+header.contracts.label=\u0414\u043e\u0433\u043e\u0432\u043e\u0440\u0430
+header.contracts.description=\u0414\u043e\u0433\u043e\u0432\u043e\u0440\u0430
 
-page.contracts-main=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 -> \u0413\u043B\u0430\u0432\u043D\u0430\u044F
+page.contracts-main=\u0414\u043e\u0433\u043e\u0432\u043e\u0440\u0430 -> \u0413\u043b\u0430\u0432\u043d\u0430\u044f
 
-page.contracts=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 -> \u0421\u043F\u0438\u0441\u043E\u043A
-page.contracts.filter=(\u043E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u043D\u043E)
+page.contracts=\u0414\u043e\u0433\u043e\u0432\u043e\u0440\u0430 -> \u0421\u043f\u0438\u0441\u043e\u043a
+page.contracts.filter=(\u043e\u0442\u0444\u0438\u043b\u044c\u0442\u0440\u043e\u0432\u0430\u043d\u043e)
 
-page.contracts-documents=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 -> \u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B
-page.contracts-documents.filter=(\u043E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u043D\u043E)
+page.contracts-documents=\u0414\u043e\u0433\u043e\u0432\u043e\u0440\u0430 -> \u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u044b
+page.contracts-documents.filter=(\u043e\u0442\u0444\u0438\u043b\u044c\u0442\u0440\u043e\u0432\u0430\u043d\u043e)
 
-page.contracts-reports=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 -> \u041E\u0442\u0447\u0435\u0442\u044B
+page.contracts-reports=\u0414\u043e\u0433\u043e\u0432\u043e\u0440\u0430 -> \u041e\u0442\u0447\u0435\u0442\u044b
 
-contract.regProjectNumber=\u041D\u043E\u043C\u0435\u0440 \u043F\u0440\u043E\u0435\u043A\u0442\u0430
-contract.regNumber=\u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
-contract.parther=\u041A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442
-contract.type=\u0412\u0438\u0434 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+contract.regProjectNumber=\u041d\u043e\u043c\u0435\u0440 \u043f\u0440\u043e\u0435\u043a\u0442\u0430
+contract.regNumber=\u041d\u043e\u043c\u0435\u0440 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430
+contract.parther=\u041a\u043e\u043d\u0442\u0440\u0430\u0433\u0435\u043d\u0442
+contract.type=\u0412\u0438\u0434 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430
 contract.status=\u0421\u0442\u0430\u0442\u0443\u0441
-contract.conclusionDate=\u0414\u0430\u0442\u0430 \u0437\u0430\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u044F
+contract.conclusionDate=\u0414\u0430\u0442\u0430 \u0437\u0430\u043a\u043b\u044e\u0447\u0435\u043d\u0438\u044f
 
-contract.additionalDocumentType=\u0412\u0438\u0434 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
-contract.deleteReason=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F
-contract.contractTime.link=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442 \u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
-contract.contractTime.attachment=\u041F\u0440\u0438\u043B\u043E\u0436\u0435\u043D\u043D\u044B\u0439 \u043E\u0431\u0440\u0430\u0437 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
-contract.contractTime.baseOnDocument=\u041E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u0435
-contract.contractTime.fromTime=\u041D\u0430\u0447\u0430\u043B\u043E \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
-contract.contractTime.toTime=\u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u0435 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
+contract.additionalDocumentType=\u0412\u0438\u0434 \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0430
+contract.deleteReason=\u041f\u0440\u0438\u0447\u0438\u043d\u0430 \u0443\u0434\u0430\u043b\u0435\u043d\u0438\u044f
+contract.contractTime.link=\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442 \u043a \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0443
+contract.contractTime.attachment=\u041f\u0440\u0438\u043b\u043e\u0436\u0435\u043d\u043d\u044b\u0439 \u043e\u0431\u0440\u0430\u0437 \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0430
+contract.contractTime.baseOnDocument=\u041e\u0441\u043d\u043e\u0432\u0430\u043d\u0438\u0435
+contract.contractTime.fromTime=\u041d\u0430\u0447\u0430\u043b\u043e \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044f
+contract.contractTime.toTime=\u0417\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u0438\u0435 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044f
 
-contract.contractTermination.baseOnDocument=\u041E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u0435
+contract.contractTermination.baseOnDocument=\u041e\u0441\u043d\u043e\u0432\u0430\u043d\u0438\u0435
 
-lecm-additional-document_counterparty=\u041A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442
-lecm-additional-document_contractType=\u0412\u0438\u0434 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
+lecm-additional-document_counterparty=\u041a\u043e\u043d\u0442\u0440\u0430\u0433\u0435\u043d\u0442
+lecm-additional-document_contractType=\u0412\u0438\u0434 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430
 
+contracts.report.contracts-list.title=\u041e\u0442\u0447\u0435\u0442 \u043f\u043e \u0440\u0435\u0435\u0441\u0442\u0440\u0443 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u043e\u0432
+contracts.report.approval-discipline.title=\u041e\u0442\u0447\u0435\u0442 \u043f\u043e \u0438\u0441\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u044c\u0441\u043a\u043e\u0439 \u0434\u0438\u0441\u0446\u0438\u043f\u043b\u0438\u043d\u0435 \u043f\u043e \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u044f\u043c
+contracts.report.success=\u041e\u0442\u0447\u0435\u0442 \u0441\u0444\u043e\u0440\u043c\u0438\u0440\u043e\u0432\u0430\u043d \u0443\u0441\u043f\u0435\u0448\u043d\u043e
+contracts.report.failure=\u041e\u0448\u0438\u0431\u043a\u0430 \u0444\u043e\u0440\u043c\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f \u043e\u0442\u0447\u0435\u0442\u0430
