--- a/lecm-approval/share/src/main/java/ru/it/lecm/approval/form/form_ru.properties
+++ b/lecm-approval/share/src/main/java/ru/it/lecm/approval/form/form_ru.properties
@@ -1,2 +1,4 @@
 lecm-al_approval-item-employee-position=\u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C
-lecm-al_approval-item-employee-unit=\u041F\u043E\u0437\u0438\u0446\u0438\u044F
+lecm-al_approval-item-employee-unit=\u041F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u0435
+
+button.print=\u041F\u0435\u0447\u0430\u0442\u044C
