--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-model_ru.properties
@@ -20,8 +20,8 @@ lecm-contract_model.property.lecm-contract_signedCounterparty.title=\u041F\u043E
 lecm-contract_model.property.lecm-contract_signedCounterparty.description=\u041F\u043E\u0434\u043F\u0438\u0441\u0430\u043D\u043E \u043A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442\u043E\u043C
 lecm-contract_model.property.lecm-contract_signatoryCounterparty.title=\u041F\u043E\u0434\u043F\u0438\u0441\u0430\u043D\u0442 \u041A/\u0410
 lecm-contract_model.property.lecm-contract_signatoryCounterparty.description=\u041F\u043E\u0434\u043F\u0438\u0441\u0430\u043D\u0442 \u0441\u043E \u0441\u0442\u043E\u0440\u043E\u043D\u044B \u043A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442\u0430
-lecm-contract_model.property.lecm-contract_totalSum.title=\u0421\u0443\u043C\u043C\u0430 \u043F\u043E \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
-lecm-contract_model.property.lecm-contract_totalSum.description=\u0421\u0443\u043C\u043C\u0430 \u043F\u043E \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
+lecm-contract_model.property.lecm-contract_totalAmount.title=\u0421\u0443\u043C\u043C\u0430 \u043F\u043E \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
+lecm-contract_model.property.lecm-contract_totalAmount.description=\u0421\u0443\u043C\u043C\u0430 \u043F\u043E \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
 lecm-contract_model.property.lecm-contract_startDate.title=\u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract_model.property.lecm-contract_startDate.description=\u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 lecm-contract_model.property.lecm-contract_endDate.title=\u0414\u0430\u0442\u0430 \u043E\u043A\u043E\u043D\u0447\u0430\u043D\u0438\u044F \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430
