--- a/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share_ru.properties
+++ b/lecm-base/share/src/main/java/ru/it/lecm/base-share/base-share_ru.properties
@@ -18,3 +18,4 @@ message.delete.success=\u042D\u043B\u0435\u043C\u0435\u043D\u0442(\u044B) \u0431
 logicecm.base.message.enter-search-text=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 \u0441\u0442\u0440\u043E\u043A\u0443 \u043F\u043E\u0438\u0441\u043A\u0430
 
 contract.daterange=\u041F\u0435\u0440\u0438\u043E\u0434 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
+lecm.form.upload= \u0417\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044C
