--- a/lecm-approval/repo/src/main/config/messages/lecm-parallel-approval-workflow-model_ru.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-parallel-approval-workflow-model_ru.properties
@@ -1,11 +1,11 @@
-lecmPar_parallelApprovalWorkflow.type.lecmPar_parallelApproval.title=\u041F\u0430\u0440\u0430\u043B\u043B\u0435\u043B\u044C\u043D\u043E\u0435 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435
-lecmPar_parallelApprovalWorkflow.type.lecmPar_parallelApproval.description=\u041F\u0430\u0440\u0430\u043B\u043B\u0435\u043B\u044C\u043D\u043E\u0435 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435
-lecmPar_parallelApprovalWorkflow.association.lecmPar_employeesAssoc.title=\u0421\u043E\u0433\u043B\u0430\u0441\u0443\u044E\u0449\u0438\u0435
-lecmPar_parallelApprovalWorkflow.association.lecmPar_employeesAssoc.description=\u0421\u043E\u0433\u043B\u0430\u0441\u0443\u044E\u0449\u0438\u0435
-listconstraint.lecmPar_approveTaskResultConstraint.APPROVED=\u0421\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u0442\u044C
-listconstraint.lecmPar_approveTaskResultConstraint.APPROVED_WITH_REMARK=\u0421\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u0442\u044C \u0441 \u0437\u0430\u043C\u0435\u0447\u0430\u043D\u0438\u044F\u043C\u0438
-listconstraint.lecmPar_approveTaskResultConstraint.REJECTED=\u041E\u0442\u043A\u043B\u043E\u043D\u0438\u0442\u044C
-lecmPar_parallelApprovalWorkflow.association.lecmPar_approveTaskCommentAssoc.title=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442 \u0441 \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u044F\u043C\u0438
+lecmPar_parallelApprovalWorkflow.type.lecmPar_parallelApproval.title=\u041f\u0430\u0440\u0430\u043b\u043b\u0435\u043b\u044c\u043d\u043e\u0435 \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u0435
+lecmPar_parallelApprovalWorkflow.type.lecmPar_parallelApproval.description=\u041f\u0430\u0440\u0430\u043b\u043b\u0435\u043b\u044c\u043d\u043e\u0435 \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u0435
+lecmPar_parallelApprovalWorkflow.association.lecmPar_employeesAssoc.title=\u0421\u043e\u0433\u043b\u0430\u0441\u0443\u044e\u0449\u0438\u0435
+lecmPar_parallelApprovalWorkflow.association.lecmPar_employeesAssoc.description=\u0421\u043e\u0433\u043b\u0430\u0441\u0443\u044e\u0449\u0438\u0435
+listconstraint.lecmPar_approveTaskResultConstraint.APPROVED=\u0421\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u0442\u044c
+listconstraint.lecmPar_approveTaskResultConstraint.APPROVED_WITH_REMARK=\u0421\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u0442\u044c \u0441 \u0437\u0430\u043c\u0435\u0447\u0430\u043d\u0438\u044f\u043c\u0438
+listconstraint.lecmPar_approveTaskResultConstraint.REJECTED=\u041e\u0442\u043a\u043b\u043e\u043d\u0438\u0442\u044c
+lecmPar_parallelApprovalWorkflow.association.lecmPar_approveTaskCommentAssoc.title=\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442 \u0441 \u043a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u044f\u043c\u0438
 
-lecmPar_parallelApprovalWorkflow.type.lecmPar_approveTask.title=\u0417\u0430\u0434\u0430\u0447\u0430 \u043F\u0430\u0440\u0430\u043B\u043B\u0435\u043B\u044C\u043D\u043E\u0433\u043E \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u044F
-lecmPar_parallelApprovalWorkflow.type.lecmPar_approveTask.description=\u0417\u0430\u0434\u0430\u0447\u0430 \u043F\u0430\u0440\u0430\u043B\u043B\u0435\u043B\u044C\u043D\u043E\u0433\u043E \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u044F
+lecmPar_parallelApprovalWorkflow.type.lecmPar_approveTask.title=\u0421\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u0442\u044c \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442
+lecmPar_parallelApprovalWorkflow.type.lecmPar_approveTask.description=\u0421\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u0442\u044c \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442
