--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model_ru.properties
@@ -1,6 +1,8 @@
 #<type name="lecm-contract-reports:contracts-list-report">
-lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start.title=\u0414\u0430\u0442\u0430 \u043d\u0430\u0447\u0430\u043b\u0430 \u043e\u0442\u0447\u0435\u0442\u0430
-lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end.title=\u0414\u0430\u0442\u0430 \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f \u043e\u0442\u0447\u0435\u0442\u0430
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start-after.title=\u0414\u0430\u0442\u0430 \u043d\u0430\u0447\u0430\u043b\u0430 \u043e\u0442\u0447\u0435\u0442\u0430 \u043f\u043e\u0441\u043b\u0435
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start-before.title=\u0414\u0430\u0442\u0430 \u043d\u0430\u0447\u0430\u043b\u0430 \u043e\u0442\u0447\u0435\u0442\u0430 \u0434\u043e
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end-after.title=\u0414\u0430\u0442\u0430 \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f \u043e\u0442\u0447\u0435\u0442\u0430 \u043f\u043e\u0441\u043b\u0435
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end-before.title=\u0414\u0430\u0442\u0430 \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f \u043e\u0442\u0447\u0435\u0442\u0430 \u0434\u043e
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-actual-only.title=\u0422\u043e\u043b\u044c\u043a\u043e \u0430\u043a\u0442\u0443\u0430\u043b\u044c\u043d\u044b\u0435
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-sum.title=\u0421\u0443\u043c\u043c\u0430
 
@@ -10,3 +12,4 @@ lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-
 
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_approval-discipline-start.title=\u041d\u0430\u0447\u0430\u043b\u043e \u043e\u0442\u0447\u0435\u0442\u0430
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_approval-discipline-end.title=\u041a\u043e\u043d\u0435\u0446 \u043e\u0442\u0447\u0435\u0442\u0430
+
