--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-workflow_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-workflow_ru.properties
@@ -2,7 +2,9 @@ lecmContractWf_model.type.lecmContractWf_createOnBasis.title=\u0421\u043E\u0437\
 lecmContractWf_model.type.lecmContractWf_createOnBasis.description=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442 \u043D\u0430 \u043E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u0438
 lecm-lecmContractWf_model.association.lecmContractWf_documentType.title=\u0412\u0438\u0434 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 lecm-lecmContractWf_model.association.lecmContractWf_documentType.description=\u0412\u0438\u0434 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
-lecmContractWf_model.type.lecmContractWf_createOnBasis.title=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442 \u043D\u0430 \u043E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u0438
 lecmContractWf_model.type.lecmContractWf_deleteReasonTask.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F
 lecm-lecmContractWf_model.association.lecmContractWf_deleteReason.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F
 lecm-lecmContractWf_model.association.lecmContractWf_deleteReason.description=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u0443\u0434\u0430\u043B\u0435\u043D\u0438\u044F
+
+lecmContractWf_model.property.lecmContractWf_contractorSigner.title=\u041F\u043E\u0434\u043F\u0438\u0441\u0430\u043D\u0442 \u041A/\u0410
+lecmContractWf_model.property.lecmContractWf_contractorSigner.description=\u041F\u043E\u0434\u043F\u0438\u0441\u0430\u043D\u0442 \u0441\u043E \u0441\u0442\u043E\u0440\u043E\u043D\u044B \u043A\u043E\u043D\u0442\u0440\u0430\u0433\u0435\u043D\u0442\u0430
