--- a/lecm-security/repo/src/main/config/messages/security_ru.properties
+++ b/lecm-security/repo/src/main/config/messages/security_ru.properties
@@ -20,3 +20,4 @@ lecm.roles.LECM_BASIC_PG_Administrator=\u0410\u0434\u043C\u0438\u043D\u0438\u044
 lecm.roles.LECM_BASIC_PG_Reviewer=\u0420\u0435\u0446\u0435\u043D\u0437\u0435\u043D\u0442
 lecm.roles.LECM_BASIC_PG_InputCorrector=\u041A\u043E\u0440\u0440\u0435\u043A\u0442\u0438\u0440\u043E\u0432\u0449\u0438\u043A \u0432\u0432\u043E\u0434\u0430
 lecm.roles.LECM_BASIC_PG_Employee=\u0420\u0430\u0431\u043E\u0442\u043D\u0438\u043A
+lecm.roles.LECM_BASIC_PG_ActionPerformer=\u0412\u044B\u043F\u043E\u043B\u043D\u044F\u044E\u0449\u0438\u0439 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
