--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
@@ -51,3 +51,12 @@ lecm-errands_model.type.lecm-errands_settings.title=\u041D\u0430\u0441\u0442\u04
 lecm-errands_model.type.lecm-errands_settings.description=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
 lecm-errands_model.property.lecm-errands_settings-mode-choosing-executors.title=\u0420\u0435\u0436\u0438\u043C \u0432\u044B\u0431\u043E\u0440\u0430 \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u0435\u0439
 lecm-errands_model.property.lecm-errands_settings-mode-choosing-executors.description=\u0420\u0435\u0436\u0438\u043C \u0432\u044B\u0431\u043E\u0440\u0430 \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u0435\u0439
+
+lecm-errands_model.type.lecm-errands_user-settings.title=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
+lecm-errands_model.type.lecm-errands_user-settings.description=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0435 \u043D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
+lecm-errands_model.property.lecm-errands_user-settings-without-initiator-approval.title=\u0411\u0435\u0437 \u0443\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D\u0438\u044F \u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440\u043E\u043C
+lecm-errands_model.property.lecm-errands_user-settings-without-initiator-approval.description=\u0411\u0435\u0437 \u0443\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D\u0438\u044F \u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440\u043E\u043C
+lecm-errands_model.association.lecm-errands_user-settings-default-initiator-assoc.title=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440 \u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E
+lecm-errands_model.association.lecm-errands_user-settings-default-initiator-assoc.description=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440 \u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E
+lecm-errands_model.association.lecm-errands_user-settings-default-subject-assoc.title=\u0422\u0435\u043C\u0430\u0442\u0438\u043A\u0430 \u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E
+lecm-errands_model.association.lecm-errands_user-settings-default-subject-assoc.description=\u0422\u0435\u043C\u0430\u0442\u0438\u043A\u0430 \u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E
