--- a/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/menu/reports-editor.menu.get_ru.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/menu/reports-editor.menu.get_ru.properties
@@ -9,3 +9,4 @@ lecm.reports-editor.reportTypes.btn=\u0422\u0438\u043F\u044B \u043E\u0442\u0447\
 lecm.reports-editor.reportProviders.btn=\u041F\u0440\u043E\u0432\u0430\u0439\u0434\u0435\u0440\u044B \u043E\u0442\u0447\u0435\u0442\u043E\u0432
 lecm.reports-editor.reportColumnTypes.btn=\u0422\u0438\u043F \u043A\u043E\u043B\u043E\u043D\u043E\u043A \u0432 \u043E\u0442\u0447\u0435\u0442\u0435
 lecm.reports-editor.reportParameterTypes.btn=\u0422\u0438\u043F \u043F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u043E\u0432 \u043E\u0442\u0447\u0435\u0442\u043E\u0432
+lecm.reports-editor.deploy.btn=\u0417\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u043E\u0442\u0447\u0435\u0442
